Closed
Bug 1490518
Opened 8 years ago
Closed 7 years ago
Invalidation broken with scale transforms and SVG
Categories
(Core :: Web Painting, defect)
Core
Web Painting
Tracking
()
VERIFIED
FIXED
mozilla64
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox62 | --- | unaffected |
| firefox63 | + | verified |
| firefox64 | + | verified |
People
(Reporter: mstange, Assigned: mikokm)
References
Details
(Keywords: regression)
Attachments
(3 files)
|
681 bytes,
text/html
|
Details | |
|
46 bytes,
text/x-phabricator-request
|
mattwoodrow
:
review+
|
Details | Review |
|
10.85 KB,
patch
|
pascalc
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
Steps to reproduce:
1. Load the attached testcase.
2. Click anywhere on the page.
Expected results:
Only the green rectangle should remain.
Actual results:
Parts of the blue rectangle remain as well.
This was caused by bug 1462672 (verified with mozregression).
This causes glitches on the aDAU dashboard which is not publicly accessible.
Flags: needinfo?(mikokm)
| Assignee | ||
Updated•8 years ago
|
Assignee: nobody → mikokm
Status: NEW → ASSIGNED
Flags: needinfo?(mikokm)
| Reporter | ||
Updated•8 years ago
|
| Assignee | ||
Comment 1•8 years ago
|
||
Thank you for the reduced testcase!
Updated•8 years ago
|
Keywords: regression
| Assignee | ||
Comment 2•7 years ago
|
||
| Reporter | ||
Comment 3•7 years ago
|
||
I have applied this fix locally and confirmed that it fixes the original issue on the aDAU dashboard. Thanks!
Updated•7 years ago
|
Comment 4•7 years ago
|
||
Comment on attachment 9009594 [details]
Bug 1490518 - Scale areas after clipping to unscaled clip
Matt Woodrow (:mattwoodrow) has approved the revision.
Attachment #9009594 -
Flags: review+
Pushed by mikokm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/948e96f2b7d9
Scale areas after clipping to unscaled clip r=mattwoodrow
Comment 6•7 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
| Assignee | ||
Comment 8•7 years ago
|
||
(In reply to Julien Cristau [:jcristau] from comment #7)
> Is this ready for uplift to beta?
The attached patch does not apply cleanly due to some whitespace changes. I will post a rebased patch after the try run finishes.
Flags: needinfo?(mikokm)
| Assignee | ||
Comment 9•7 years ago
|
||
| Assignee | ||
Comment 10•7 years ago
|
||
Comment on attachment 9012135 [details] [diff] [review]
1490518-beta.diff
Approval Request Comment
[Feature/Bug causing the regression]: SVG elements with scale transforms are not invalidating properly, when the transform is flattened.
[User impact if declined]: Possible artifacts where the SVG was, if the scale transformed SVG changes.
[Is this code covered by automated tests?]: Yes, there is a reftest.
[Has the fix been verified in Nightly?]: Yes, I have verified the fix in Nightly.
[Needs manual test from QE? If yes, steps to reproduce]: Optional.
STR:
1) Open the attach testcase https://bug1490518.bmoattachments.org/attachment.cgi?id=9008250
2) clicking the blue box should completely hide it (with just one click)
[List of other uplifts needed for the feature/fix]: None.
[Is the change risky?]: Low risk.
[Why is the change risky/not risky?]: The fix has been in the Nightly for a week and there is a reftest. The worst case is unnecessary invalidation (and painting) with improved correctness.
[String changes made/needed]: None.
Attachment #9012135 -
Flags: approval-mozilla-beta?
Comment 11•7 years ago
|
||
Comment on attachment 9012135 [details] [diff] [review]
1490518-beta.diff
Low risk patch for a tracked regression, approved for 63 beta 10, thanks.
Attachment #9012135 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Updated•7 years ago
|
Flags: qe-verify+
Comment 12•7 years ago
|
||
| bugherder uplift | ||
Flags: in-testsuite+
Updated•7 years ago
|
status-firefox-esr60:
--- → unaffected
Comment 13•7 years ago
|
||
I managed to reproduce the issue using an older version of Nightly (2018-09-11) on Windows 10 x64.
I retested everything using the latest Nightly 64.0a1 on Windows 10 x64, Ubuntu 16.04 x64 and macOS 10.13. The bug is not reproducing anymore.
But I can still reproduce the issue on beta 63.0b9. I think I have to wait until beta 63.0b10 is up to verify the fix there.
Comment 14•7 years ago
|
||
I verified the fix on beta 63.0b10 using Windows 10 x64, Ubuntu 16.04 x64 and macOS 10.13. The bug is not reproducing anymore.
You need to log in
before you can comment on or make changes to this bug.
Description
•