Bug 1490518 - Scale areas after clipping to unscaled clip r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D6031